feat:delete modal.

--- a/src/app/shared/ui/universal-table/universal-table.component.html
+++ b/src/app/shared/ui/universal-table/universal-table.component.html
@@ -26,6 +26,9 @@
       <button mat-icon-button matTooltip="Click to Edit" (click)="editStudent(element)"  class="iconbutton" color="primary">
         <mat-icon aria-label="Edit">edit</mat-icon>
       </button>
+      <button mat-icon-button matTooltip="Click to Edit" (click)="openDialog('0ms', '0ms',element.id)"  class="iconbutton" color="primary">
+        <mat-icon aria-label="Delete">delete</mat-icon>
+      </button>
     </td>
   </ng-container>
 
